--- a/source/posts/2012-06-13.md
+++ b/source/posts/2012-06-13.md
@@ -1,4 +1,4 @@
-# Новая политика редации
+# Новая политика редакции
 
 За последние несколько дней меня 4 раза попросили написать "редакционную политику". Потому что многие хотят прислать свои ссылки, поправить орфографию и пунктуацию, а то и с дизайном помочь. Сейчас я расскажу, как это сделать, а пока котушечка, чтобы не умереть со скуки, арбуз очень хочется...
 
