--- a/source/posts/2012-06-13.md
+++ b/source/posts/2012-06-13.md
@@ -26,7 +26,7 @@
 
 ## Для всех
 * [Разработчик Camera+ послал нафиг всех потенциальных инвесторов и VC.](http://techcrunch.com/2012/06/08/camera-plus-turns-2-says-eff-the-vcs/) Вот это мужик, уважаю. Действительно сейчас нет смысла в инвестициях, с учетом того как прет его приложение. {iphone} {mobile} {cameraplus}
-* [На Lwn.net совершенно всерьез обсуждают нарушение GPL со стороны армии США.](http://lwn.net/Articles/501536/) Дело в том, что в некоторых ракетах исползуются компьютеры, содержащие GPL код. Возникает вопрос - когда происходит нарушение, по факту изготовления такой ракеты, или всё же когда происходит "доставка" GPL-содержащей ракеты "получателю" в Азии? {gpl} {license} {fun}
+* [На Lwn.net совершенно всерьез обсуждают нарушение GPL со стороны армии США.](http://lwn.net/Articles/501536/) Дело в том, что в некоторых ракетах используются компьютеры, содержащие GPL код. Возникает вопрос - когда происходит нарушение, по факту изготовления такой ракеты, или всё же когда происходит "доставка" GPL-содержащей ракеты "получателю" в Азии? {gpl} {license} {fun}
 * [Firefox, оказыается, поддерживает DnT в текущих бетах.](http://blog.mozilla.org/theden/2012/06/05/firefox-tip-tell-sites-you-dont-want-to-be-tracked/) Хотя я сейчас на Firefox обижен и не буду про него ничего писать два выпуска, так и знайте. {dnt} {firefox} {browser}
 * [Flash для Firefox теперь тоже будет работать в песочнице.](http://www.webmonkey.com/2012/06/flash-firefox-play-together-in-new-security-sandbox/) Правда, пока только для Windows, но это уже шаг вперед. А еще теперь флеш обещает обновляться сам и автоматически. Это пугает, но уж лучше так, чем не обновляться совсем. [Более попсовая статья в CW](http://www.computerworld.com/s/article/9227927/Adobe_patches_critical_Flash_bugs_ships_sandboxed_plug_in_for_Firefox?taxonomyId=85&pageNumber=2). {adobe} {flash} {firefox} {browser}
 * [В свежей бете Хрома есть Metro-like интерфейс](http://venturebeat.com/2012/06/11/hands-on-google-chrome-windows-8/#s:chrome-win-8-2) и это очень круто. Особенно я бы отметил, что MS не стали мешать и пустили все браузеры в свою OS, хотя раньше не хотели. {chrome} {browser} {windows8}
@@ -61,7 +61,7 @@
 * [Туториал по meteor от tutsplus.](http://net.tutsplus.com/tutorials/javascript-ajax/whats-this-meteor-thing/) Оставлю тут, чтобы положить в закладки. Очень мне интересна эта технология, как технология. {javascript} {tutorial}
 * [python — itsdangerous.](http://packages.python.org/itsdangerous/) Библиотека для работы с подписанными данными. Это громко сказано, скорее это библиотека для работы с данными, заверенными криптографической подписью. Особенно удобно подписывать куку, храня в ней не слишком важные, но данные. Повторюсь, для тех кто в танке, нет, для авторизации лучше всё-же bcrypt. {python} {security}
 * [$.onAvailable и $.onContentReady](https://github.com/furf/jquery-onavailable) - два новых события для DOM. Позволяют не дожидаться загрузки и готовности всего дерева. На некоторых проектах ускоряет старт работы JavaScript в несколько раз. {javascript} {html}
-* [Ревью исходных текстов Doom3.](http://fabiensanglard.net/doom3/index.php) Удивительно подробный обзор с картинками про арихтектуру и даже фрагментами самого кода, который с недавних пор доступен на GitHub {doom3} {game} {code} {github}
+* [Ревью исходных текстов Doom3.](http://fabiensanglard.net/doom3/index.php) Удивительно подробный обзор с картинками про архитектуру и даже фрагментами самого кода, который с недавних пор доступен на GitHub {doom3} {game} {code} {github}
 * [Mockstar.](http://mockstar.readthedocs.org/) Приятная библиотека для юнит-тестирования в питоне. Является улучшением поверх скоро войдущей в стандартную библиотеку [Mock.](http://www.voidspace.org.uk/python/mock/mock.html) (via [gh@k-bx](https://github.com/k-bx)) {python} {unittest} {code}
 * [Gridpak](http://gridpak.com/) — одностраничный микросервис для создания "responsive" сеток с заданными характеристиками. Результат: скачиваемый архив со всем, что нужно вебдевелоперу (js, css, less и т.д.) (via [gh@sitnin](https://github.com/sitnin)). {grid} {css} {design}
 
