"40 человеками" меня пугает. Хотя, возможно, так и задумывалось.

--- a/source/posts/2012-06-13.md
+++ b/source/posts/2012-06-13.md
@@ -34,7 +34,7 @@
 * [Обзор именений в мобильном сафари iOS6](http://taitems.tumblr.com/post/24936855546/what-ios-6-mobile-safari-offers-front-end-devs) с точки зрения разработчика. Самое интересное для меня - Smart App Banner {ios} {safari} {apple} {mobile}
 * [Они там в Самсунге совсем обнаглели.](http://techinch.com/2012/06/12/samsung-copies-apple-again/) Приложение для контроля батарейки содержит оригинальную иконку Apple Update. Думаю всё как обычно, ленивые аутсорсеры самсунга постарались, но, блин, должен же быть какой-то контроль, нет? {apple} {samsung} {piracy} {mobile}
 * [Дизайн теперь тоже делается строго по науке.](http://designshack.net/articles/graphics/twitters-new-logo-the-geometry-and-evolution-of-our-favorite-bird/) На примере нового логотипа твиттера показывается, насколько теперь всё хитро, с кругами, спиралями и правилом золотого сечения. {design} {logo}
-* [Как я удаленно управляю 40 человеками.](http://ryancarson.com/post/24884883426/how-i-manage-40-people-remotely) У меня 100% тот же паттерн. Чат, общий файлообменник, общий таск трекер. Больше того, у меня эти 40 человек в 11 проектах - и ничего, я всё ещё живой. {business} {management}
+* [Как я удаленно управляю 40 людьми.](http://ryancarson.com/post/24884883426/how-i-manage-40-people-remotely) У меня 100% тот же паттерн. Чат, общий файлообменник, общий таск трекер. Больше того, у меня эти 40 человек в 11 проектах - и ничего, я всё ещё живой. {business} {management}
 * [Заново обдумывая бизнес-модель HBO.](http://bits.blogs.nytimes.com/2012/06/10/disruptions-for-hbo-still-beholden-to-a-cable-company/) Не перестаю удивляться этой телекомпании. Снимать сериалы со стоимостью сезона в $20M и быть сверхприбыльной - вот это человечищи! {HBO} {tv} {business}
 * [Ну, что, я был прав. Meebo закрывает все свои проекты.](http://techcrunch.com/2012/06/09/meebo-product-shutdown/) Это была классическая гугловская "покупка ради команды", теперь все команды покупают чтобы делать G+. {gplus} {meebo} {google} {acqhiring}
 * [Вложиться в качество программерского стула.](http://www.codinghorror.com/blog/2008/07/investing-in-a-quality-programming-chair.html) Старый пост о том, насколько важно, чтобы у программиста было хорошее кресло. Тоже считаю что это жизненно важно, сам сижу на Аероне, и вам того же советую. {furniture} {programmers} {life} {*}
