@name looks like twitter account so Let's use twitter username insted

--- a/source/posts/2012-06-14.md
+++ b/source/posts/2012-06-14.md
@@ -19,7 +19,7 @@
 ## Для всех
 
 * [Ребята в Rockstar Games гении!](http://arstechnica.com/gaming/2012/06/rockstar-condemns-max-payne-3-cheaters-to-play-only-against-each-other/) Тех, кто читит надо запихнуть в отдельный пулл. Для читтеров. Чтобы читтеры играли **только** с читтерами. {rockstar} {maxpayne3} {games}
-* [Почему приватность важна, даже если тебе нечего скрывать.](http://chronicle.com/article/Why-Privacy-Matters-Even-if/127461/) Большая цитата из книги Daniel J. Solove, профессора права из университета Вашингтона. Никто не хочет перевести? Очень сильная и убедительная статья. {lawyer} {security} {*} 
+* [Почему приватность важна, даже если тебе нечего скрывать.](http://chronicle.com/article/Why-Privacy-Matters-Even-if/127461/) Большая цитата из книги Daniel J. Solove, профессора права из университета Вашингтона. Никто не хочет перевести? Очень сильная и убедительная статья. {lawyer} {security} {*}
 * [BBC сообщает: создатель Linux все же получил Millennium Technology Prize.](http://www.bbc.com/news/technology-18423502) Правда ему пришлось разделить приз с чуваком, который изобрел какие-то там жалкие батарейки. Тут надо было добавить "жааалкие людишки!". На самом деле я так пишу потому, что мы Линуса уже поздравляли еще 2 месяца назад. {linux} {money}
 * [Поклонникам идеалогии Zero Inbox,](https://www.beeminder.com/gmailzero) использющим gmail, посвящается. Вы что, правда пользуетесь метафорой пустого инбокса? Это разве не самообман? {gmail} {question}
 * [Смешной сервис FriendsDomains.](http://friendsdomains.com/) Позволяет поделиться с друзьями списком своих доменов, а потом смотреть, у кого какие есть. Завтра обязатель залью туда список своих доменов. {domain} {web20}
@@ -32,7 +32,7 @@
 * [Вышел WordPress 3.4.](http://thenextweb.com/apps/2012/06/13/wordpress-3-4-is-out-featuring-better-theme-customization-twitter-embeds-and-image-captions/) Из полезного для себя нашел бы только интеграцию с твиттером. Вообще перестал понимать, зачем люди используют WP как блоговый движок. {wordpress}
 * [YouSendIt теперь интегрирован в Yahoo Mail.](http://techcrunch.com/2012/06/13/yahoo-yousendit/) Приятно, когда твоё хорошее решение повторяют игроки вроде Yahoo. Действительно, посылать большие файлы по smtp - глупо, гораздо проще дать их залить на популярный сервис и вставить в письмо ссылку. {yahoo} {mail} {files}
 * [Майкрософт сошла с ума. Windows RT для производителей будет стоить $85.](http://venturebeat.com/2012/06/12/windows-rt-pricing-85/) Таким, нехитрым образом MS отрезали себе дорогу на дешевые таблетки, оставшись только в элитном классе планшетов, с ценой от $800. Нет, майкрософт в последнее время ведут себя хорошо, просто иногда очень по-детски. {microsoft} {windowsrt}
-* [Readability больше не будут принимать пожертвования от читателей](http://blog.readability.com/2012/06/announcement/)  - говорят "это не работает". Веб сильно фрагментирован, авторов слишком много и 90% собранных денег остаются не востребованными  ($150 000 между прочим). (via @igorkhomyakov). Вообще всё еще смешнее. $150k было решено раздать на чарити в две благотворительные организации. Я уже авторам, что хочу свои деньги назад. {readability} {money} {fail} {*}
+* [Readability больше не будут принимать пожертвования от читателей](http://blog.readability.com/2012/06/announcement/)  - говорят "это не работает". Веб сильно фрагментирован, авторов слишком много и 90% собранных денег остаются не востребованными  ($150 000 между прочим). (via @hostmaster). Вообще всё еще смешнее. $150k было решено раздать на чарити в две благотворительные организации. Я уже авторам, что хочу свои деньги назад. {readability} {money} {fail} {*}
 
 ## На грани
 
@@ -50,12 +50,12 @@
 * [Matt Aimonetti рассуждает о переизобретании разработки для веба.](http://matt.aimonetti.net/posts/2012/06/13/rethinking-web-service-development/) И в общем всё правильно пишет, правда для рельс в первую очередь. Ключевые слова: DSL и API. {ruby} {web} {api}
 * [Эрик Мориц приводит сравнительные тесты производительности для серверной части вебсокета.](https://github.com/ericmoritz/wsdemo/blob/master/results.md) 5 реализаций, на эрланге, джаве, го, ноде и питоне. {html} {websocket}
 * [Линуксоиды, будьте осторожнее с последними версиями Atom.](https://gist.github.com/2925633) Вкратце, там сейчас используется такой графический чипсет, поддержка которого есть только в MeeGo. Хотя, автор сгущает краски, исходники есть, наложить патч на ядро не так страшно, вроде. {kernel} {linux}
-* [Альтернативный подход к Git.](http://www.randyfay.com/node/91) Чуваку не нравится мержиться через pull/push, потому что мало контроля за происходящим. И он всем предлагает работать через бранч-ребей-пуш. Ужас, в общем, и чудеса мазохизма. {git} {bdsm} 
+* [Альтернативный подход к Git.](http://www.randyfay.com/node/91) Чуваку не нравится мержиться через pull/push, потому что мало контроля за происходящим. И он всем предлагает работать через бранч-ребей-пуш. Ужас, в общем, и чудеса мазохизма. {git} {bdsm}
 * [Давний программист на PHP рассуждает на тему, почему PHP не моден,](http://blog.appfog.com/php-the-quiet-powerhouse/) а так же оптимистично считает что PHP всё еще на коне и лучше всех. Даже не знаю что еще написать. {php} {php} {php} {bullshit} {php}
 * [У них флешмоб! Вот ](http://vascop.github.com/blog/2012/06/13/why-I-use-python-and-enjoy-it-thoroughly.html) еще один чувак, который рассказывает про свой любимый язык. На этот раз про python, и так же предвзято, как про php. {python} {python} {pip} {python}
 * [Alloy - фреймворк для написания приложений в среде Титаниум.](https://github.com/appcelerator/alloy) Я вам про среду эту много раз рассказывал, писать на ней всегда было не то чтобы очень удобно. А Alloy дает вполне приемлимый MVC и кучу шорткатов к разным операциям титаниума. {javascript} {html} {titanium} {moble}
 * [Construct.js - минималистичная обертка для облегчения обьектного программирования в JS.](https://github.com/jlongster/construct.js) Для тех, кто не осилил понять, что такое прототип. {javascript} {html}
-* [MongoLab рассказывает, как правильно делать комбинированные индексы,](http://blog.mongolab.com/2012/06/cardinal-ins/) а так же почему правильнее работать с сортированными данными. Вроде бы всё очевидно, но советы дельные. {mongo} 
+* [MongoLab рассказывает, как правильно делать комбинированные индексы,](http://blog.mongolab.com/2012/06/cardinal-ins/) а так же почему правильнее работать с сортированными данными. Вроде бы всё очевидно, но советы дельные. {mongo}
 
 ## Разное
 
