--- a/source/posts/2012-06-14.md
+++ b/source/posts/2012-06-14.md
@@ -32,7 +32,7 @@
 * [Вышел WordPress 3.4.](http://thenextweb.com/apps/2012/06/13/wordpress-3-4-is-out-featuring-better-theme-customization-twitter-embeds-and-image-captions/) Из полезного для себя нашел бы только интеграцию с твиттером. Вообще перестал понимать, зачем люди используют WP как блоговый движок. {wordpress}
 * [YouSendIt теперь интегрирован в Yahoo Mail.](http://techcrunch.com/2012/06/13/yahoo-yousendit/) Приятно, когда твоё хорошее решение повторяют игроки вроде Yahoo. Действительно, посылать большие файлы по smtp - глупо, гораздо проще дать их залить на популярный сервис и вставить в письмо ссылку. {yahoo} {mail} {files}
 * [Майкрософт сошла с ума. Windows RT для производителей будет стоить $85.](http://venturebeat.com/2012/06/12/windows-rt-pricing-85/) Таким, нехитрым образом MS отрезали себе дорогу на дешевые таблетки, оставшись только в элитном классе планшетов, с ценой от $800. Нет, майкрософт в последнее время ведут себя хорошо, просто иногда очень по-детски. {microsoft} {windowsrt}
-* [Readability больше не будут принимать пожертвования от читателей](http://blog.readability.com/2012/06/announcement/)  - говорят "это не работает". Веб сильно фрагментирован, авторов слишком много и 90% собранных денег остаются не востребованными  ($150 000 между прочим). (via @hostmaster). Вообще всё еще смешнее. $150k было решено раздать на чарити в две благотворительные организации. Я уже авторам, что хочу свои деньги назад. {readability} {money} {fail} {*}
+* [Readability больше не будут принимать пожертвования от читателей](http://blog.readability.com/2012/06/announcement/)  - говорят "это не работает". Веб сильно фрагментирован, авторов слишком много и 90% собранных денег остаются не востребованными  ($150 000 между прочим). (via @hostmaster). Вообще всё еще смешнее. $150k было решено раздать на чарити в две благотворительные организации. Я уже написал авторам, что хочу свои деньги назад. {readability} {money} {fail} {*}
 
 ## На грани
 
