--- a/source/posts/2012-06-14.md
+++ b/source/posts/2012-06-14.md
@@ -4,35 +4,35 @@
 
 ![center](http://chyo.ru/sklype.png)
 
-Продукт называется "Conversation Ads", т.е. подразумевается что люди будут обсуждать эту рекламу прямо во время скайпкола. Реклама сейчас таргетируется по базовому соцдему: местоположение, возраст, пол и тп. При большом желании персонализацию рекламы [можно выключить](http://choice.live.com/advertisementchoice), но пока это не работает:)
+Продукт называется "Conversation Ads", т.е. подразумевается, что люди будут обсуждать эту рекламу прямо во время скайпкола. Реклама сейчас таргетируется по базовому соцдему: местоположение, возраст, пол и тп. При большом желании персонализацию рекламы [можно выключить](http://choice.live.com/advertisementchoice), но пока это не работает:)
 
-[Вот прямая цитата из пресс-релиза](http://blogs.skype.com/en/2012/06/skype_advertising_update.html): "При **аудио** звонке 1:1, пользователи увидят контент, который возможно подскажет им тему, подходящую обоим участникам разговора. Так что, вам стоит думать о Conversation Ads, как о способе создавать прикольную активность между вашими друзьями,  семьей и брендами, которые тебе важны. Мы совершенно уверены, что это поможет Скайп более увлекательным и удобным местом для разговоров на каждый день".
+[Вот прямая цитата из пресс-релиза](http://blogs.skype.com/en/2012/06/skype_advertising_update.html): "При **аудио** звонке 1:1, пользователи увидят контент, который, возможно, подскажет им тему, подходящую обоим участникам разговора. Так что, вам стоит думать о Conversation Ads, как о способе создавать прикольную активность между вашими друзьями,  семьей и брендами, которые тебе важны. Мы совершенно уверены, что это поможет Скайп более увлекательным и удобным местом для разговоров на каждый день".
 
 Идея настолько глупая, что может сработать. [Ребята из ArsTechnica](http://arstechnica.com/information-technology/2012/06/skype-calls-to-feature-ads-big-enough-to-interrupt-any-conversation/) даже пошутили, что это должен был быть не пресс-релиз, а статья в [The Onion](http://www.theonion.com/).
 
-Это первый большой шаг для Microsoft. Когда, год назад, Балмер купил Скайп, все спрашивали "а зачем им это?". Собственно вот и ответ - для экспериментов с рекламой. И это действительно хороший способ для экспериментов. Кстати, обратите внимание, что все ссылки про управление этой рекламой ведут на сервера Microsoft.
+Это первый большой шаг для Microsoft. Когда год назад Балмер купил Скайп, все спрашивали "а зачем им это?". Собственно, вот и ответ - для экспериментов с рекламой. И это действительно хороший способ для экспериментов. Кстати, обратите внимание, что все ссылки про управление этой рекламой ведут на сервера Microsoft.
 
-В общем идея отличная, и многим пользователям наверняка даже понравится. А я пока судорожно ищу, на что можно поменять Skype для ежедневного использования. У меня-то тем полно, успеваю не только по скайпу рассказать, но и с вами поделиться.
+В общем, идея отличная, и многим пользователям наверняка даже понравится. А я пока судорожно ищу, на что можно поменять Skype для ежедневного использования. У меня-то тем полно, успеваю не только по скайпу рассказать, но и с вами поделиться.
 
 -----
 
 ## Для всех
 
-* [Ребята в Rockstar Games гении!](http://arstechnica.com/gaming/2012/06/rockstar-condemns-max-payne-3-cheaters-to-play-only-against-each-other/) Тех, кто читит надо запихнуть в отдельный пулл. Для читтеров. Чтобы читтеры играли **только** с читтерами. {rockstar} {maxpayne3} {games}
+* [Ребята в Rockstar Games гении!](http://arstechnica.com/gaming/2012/06/rockstar-condemns-max-payne-3-cheaters-to-play-only-against-each-other/) Тех, кто читит, надо запихнуть в отдельный пулл. Для читтеров. Чтобы читтеры играли **только** с читтерами. {rockstar} {maxpayne3} {games}
 * [Почему приватность важна, даже если тебе нечего скрывать.](http://chronicle.com/article/Why-Privacy-Matters-Even-if/127461/) Большая цитата из книги Daniel J. Solove, профессора права из университета Вашингтона. Никто не хочет перевести? Очень сильная и убедительная статья. {lawyer} {security} {*}
-* [BBC сообщает: создатель Linux все же получил Millennium Technology Prize.](http://www.bbc.com/news/technology-18423502) Правда ему пришлось разделить приз с чуваком, который изобрел какие-то там жалкие батарейки. Тут надо было добавить "жааалкие людишки!". На самом деле я так пишу потому, что мы Линуса уже поздравляли еще 2 месяца назад. {linux} {money}
+* [BBC сообщает: создатель Linux все же получил Millennium Technology Prize.](http://www.bbc.com/news/technology-18423502) Правда, ему пришлось разделить приз с чуваком, который изобрел какие-то там жалкие батарейки. Тут надо было добавить "жааалкие людишки!". На самом деле я так пишу потому, что мы Линуса уже поздравляли еще 2 месяца назад. {linux} {money}
 * [Поклонникам идеалогии Zero Inbox,](https://www.beeminder.com/gmailzero) использющим gmail, посвящается. Вы что, правда пользуетесь метафорой пустого инбокса? Это разве не самообман? {gmail} {question}
 * [Смешной сервис FriendsDomains.](http://friendsdomains.com/) Позволяет поделиться с друзьями списком своих доменов, а потом смотреть, у кого какие есть. Завтра обязатель залью туда список своих доменов. {domain} {web20}
-* [DISQUS официально объявили о переходе на платформу 2012.](http://blog.disqus.com/post/25017922977/the-new-disqus-2012) Переписали, чтобы было так же реалтаймово, как у [livefyre](http://livefyre.com) - боюсь что и грабли те же. Кстати, ребята из [hypercomments](http://hypercomments.com/) улучшили работу местного движка коментариев на мобильных. Теперь получше? {disqus} {livefyre} {comments} {hypercomments}
-* [Адам Лешинский приводит интересные цитаты из книги Inside Apple.](http://swaaanson.tumblr.com/post/25005539624/kindle-notes-inside-apple-by-adam-lashinsky) В третий раз обещаю себе что скачаю и прочитаю. Пока не удалось. {apple} {history}
-* [Я на Reddit с самого начала. Точнее с того момента, когда Аарон Шварц его переписал.](http://www.reddit.com/r/BannedDomains) Но я ни в жизни не знал, что там есть реддит со списком забаненных доменов. И он **огромный!** {reddit} {greatwall}
-* [Твиттер уходит от минимализма.](http://blog.twitter.com/2012/06/experience-more-with-expanded-tweets.html) Теперь для некоторых партнерских сайтов будет показываться прямо превью ссылки, включая видео, фоточки и куски текста. А когда-то гордились своими 150 символами. {twitter}
+* [DISQUS официально объявили о переходе на платформу 2012.](http://blog.disqus.com/post/25017922977/the-new-disqus-2012) Переписали, чтобы было так же реалтаймово, как у [livefyre](http://livefyre.com) - боюсь, что и грабли те же. Кстати, ребята из [hypercomments](http://hypercomments.com/) улучшили работу местного движка коментариев на мобильных. Теперь получше? {disqus} {livefyre} {comments} {hypercomments}
+* [Адам Лешинский приводит интересные цитаты из книги Inside Apple.](http://swaaanson.tumblr.com/post/25005539624/kindle-notes-inside-apple-by-adam-lashinsky) В третий раз обещаю себе, что скачаю и прочитаю. Пока не удалось. {apple} {history}
+* [Я на Reddit с самого начала. Точнее, с того момента, когда Аарон Шварц его переписал.](http://www.reddit.com/r/BannedDomains) Но я ни в жизни не знал, что там есть реддит со списком забаненных доменов. И он **огромный!** {reddit} {greatwall}
+* [Твиттер уходит от минимализма.](http://blog.twitter.com/2012/06/experience-more-with-expanded-tweets.html) Теперь для некоторых партнерских сайтов будет показываться прямо превью ссылки, включая видео, фоточки и куски текста. А когда-то гордились своими 140 символами. {twitter}
 * [Attachments.me научился искать по документам с Гугл.Диска.](http://thenextweb.com/apps/2012/06/13/gmail-search-tool-attachments-me-rolls-out-google-drive-integration/) Это было логично, потому что искать надо по всем аттачам, а часть из них доступна по ссылкам с Диска. Тоже хочу такое средство, пока не придумал как его сделать правильно. {gmail} {search}
 * [Паническая статья Рори о'Конарда о том, что гугл стал злом.](http://www.wired.com/business/2012/06/opinion-google-is-evil/) Нет, Гугл не злой, он просто кусается :) Мне приятно, что многие сейчас начали разделять мою точку зрения. Последние 3 года Г катится в неизвестно куда. {google} {mention}
 * [Вышел WordPress 3.4.](http://thenextweb.com/apps/2012/06/13/wordpress-3-4-is-out-featuring-better-theme-customization-twitter-embeds-and-image-captions/) Из полезного для себя нашел бы только интеграцию с твиттером. Вообще перестал понимать, зачем люди используют WP как блоговый движок. {wordpress}
 * [YouSendIt теперь интегрирован в Yahoo Mail.](http://techcrunch.com/2012/06/13/yahoo-yousendit/) Приятно, когда твоё хорошее решение повторяют игроки вроде Yahoo. Действительно, посылать большие файлы по smtp - глупо, гораздо проще дать их залить на популярный сервис и вставить в письмо ссылку. {yahoo} {mail} {files}
 * [Майкрософт сошла с ума. Windows RT для производителей будет стоить $85.](http://venturebeat.com/2012/06/12/windows-rt-pricing-85/) Таким, нехитрым образом MS отрезали себе дорогу на дешевые таблетки, оставшись только в элитном классе планшетов, с ценой от $800. Нет, майкрософт в последнее время ведут себя хорошо, просто иногда очень по-детски. {microsoft} {windowsrt}
-* [Readability больше не будут принимать пожертвования от читателей](http://blog.readability.com/2012/06/announcement/)  - говорят "это не работает". Веб сильно фрагментирован, авторов слишком много и 90% собранных денег остаются не востребованными  ($150 000 между прочим). (via @hostmaster). Вообще всё еще смешнее. $150k было решено раздать на чарити в две благотворительные организации. Я уже написал авторам, что хочу свои деньги назад. {readability} {money} {fail} {*}
+* [Readability больше не будут принимать пожертвования от читателей](http://blog.readability.com/2012/06/announcement/)  - говорят "это не работает". Веб сильно фрагментирован, авторов слишком много и 90% собранных денег остаются невостребованными  ($150 000 между прочим). (via @hostmaster). Вообще, всё ещё смешнее. $150k было решено раздать на чарити в две благотворительные организации. Я уже написал авторам, что хочу свои деньги назад. {readability} {money} {fail} {*}
 
 ## На грани
 
@@ -40,18 +40,18 @@
 * [Amazon, Facebook, Dropbox меняют HDD  на SSD.](http://www.wired.com/wiredenterprise/2012/06/flash-data-centers/all/) Добавлю, яндексы с гуглами тоже двигаются туда же. Да, SSD приходится менять раз в 6-9 месяцев, но это быстродействие того стоит. {ssd} {disk}
 * [Чуваки в фейсбуке хранят более 100 петабайт в HDFS,](https://www.facebook.com/notes/facebook-engineering/under-the-hood-hadoop-distributed-filesystem-reliability-with-namenode-and-avata/10150888759153920) для работы с хадупом. Очень много. Не верю, что это как-то аффектит их бизнес.
 * [Открытые API обошли опенсорс?](http://mikecurr55.wordpress.com/2012/06/12/are-open-apis-overtaking-open-source/) Автор заметил (наконец-то) что вместо мантры "достаточно открытый" софт, люди начали использовтаь "достаточно хорошие" API. У автора просто нет понимания, что акцент сместился от разработки программ, к предоставлению услуг и сервисов. {api} {opensource}
-* [Реализация API iOS для BlackBerry PlayBook.](http://www.imore.com/2012/06/13/blackberry-playbook-hacked-run-ios-apps-including/) Вы наверное не поняли, о чем это, да? Это как Wine, но для запуска iOS приложений на плейбуке. {api} {ios} {blackberry}
+* [Реализация API iOS для BlackBerry PlayBook.](http://www.imore.com/2012/06/13/blackberry-playbook-hacked-run-ios-apps-including/) Вы, наверное, не поняли, о чем это, да? Это как Wine, но для запуска iOS приложений на плейбуке. {api} {ios} {blackberry}
 * [Интересный туториал "как сделать книгу с помощью CSS3".](http://www.alistapart.com/articles/building-books-with-css3/) Предполагается, что материал книги у вас уже написан. Нашел в тексте интересную ссылку на конвертор docbook в epub, пойду сконвертирую кучу документаци... {epub} {css} {html}
 
 ## Для гиков
 
 * [Evan из Stripe.com пишет о том, как изучать, чем же занимается интерпретатор во время выполнения кода.](https://stripe.com/blog/exploring-python-using-gdb) На самом нижнем уровне - буквально, запуском django из-под gdb. Хорошая статья, особенно для тех, кто хочет понимать внутренности интерпретатора и некоторых библиотек. {django} {python} {gdb}
 * [Почему бы не использовать средства Unix вместо IDE?](http://blog.sanctum.geek.nz/series/unix-as-ide/?) Очевидно, что автор никогда не пользовался функциями нормальных IDE. Как минимум автодополнением. Хотя... у него там VIM - это же само по себе IDE. {unix} {ide} {fun}
-* [Matt Aimonetti рассуждает о переизобретании разработки для веба.](http://matt.aimonetti.net/posts/2012/06/13/rethinking-web-service-development/) И в общем всё правильно пишет, правда для рельс в первую очередь. Ключевые слова: DSL и API. {ruby} {web} {api}
+* [Matt Aimonetti рассуждает о переизобретании разработки для веба.](http://matt.aimonetti.net/posts/2012/06/13/rethinking-web-service-development/) И, в общем, всё правильно пишет, правда, для рельс в первую очередь. Ключевые слова: DSL и API. {ruby} {web} {api}
 * [Эрик Мориц приводит сравнительные тесты производительности для серверной части вебсокета.](https://github.com/ericmoritz/wsdemo/blob/master/results.md) 5 реализаций, на эрланге, джаве, го, ноде и питоне. {html} {websocket}
 * [Линуксоиды, будьте осторожнее с последними версиями Atom.](https://gist.github.com/2925633) Вкратце, там сейчас используется такой графический чипсет, поддержка которого есть только в MeeGo. Хотя, автор сгущает краски, исходники есть, наложить патч на ядро не так страшно, вроде. {kernel} {linux}
-* [Альтернативный подход к Git.](http://www.randyfay.com/node/91) Чуваку не нравится мержиться через pull/push, потому что мало контроля за происходящим. И он всем предлагает работать через бранч-ребей-пуш. Ужас, в общем, и чудеса мазохизма. {git} {bdsm}
-* [Давний программист на PHP рассуждает на тему, почему PHP не моден,](http://blog.appfog.com/php-the-quiet-powerhouse/) а так же оптимистично считает что PHP всё еще на коне и лучше всех. Даже не знаю что еще написать. {php} {php} {php} {bullshit} {php}
+* [Альтернативный подход к Git.](http://www.randyfay.com/node/91) Чуваку не нравится мержиться через pull/push, потому что мало контроля за происходящим. И он всем предлагает работать через бранч-ребейс-пуш. Ужас, в общем, и чудеса мазохизма. {git} {bdsm}
+* [Давний программист на PHP рассуждает на тему, почему PHP не моден,](http://blog.appfog.com/php-the-quiet-powerhouse/) а так же оптимистично считает что PHP всё еще на коне и лучше всех. Даже не знаю, что ещё написать. {php} {php} {php} {bullshit} {php}
 * [У них флешмоб! Вот ](http://vascop.github.com/blog/2012/06/13/why-I-use-python-and-enjoy-it-thoroughly.html) еще один чувак, который рассказывает про свой любимый язык. На этот раз про python, и так же предвзято, как про php. {python} {python} {pip} {python}
 * [Alloy - фреймворк для написания приложений в среде Титаниум.](https://github.com/appcelerator/alloy) Я вам про среду эту много раз рассказывал, писать на ней всегда было не то чтобы очень удобно. А Alloy дает вполне приемлимый MVC и кучу шорткатов к разным операциям титаниума. {javascript} {html} {titanium} {moble}
 * [Construct.js - минималистичная обертка для облегчения обьектного программирования в JS.](https://github.com/jlongster/construct.js) Для тех, кто не осилил понять, что такое прототип. {javascript} {html}
