дополнение к новости про скайп

--- a/source/posts/2012-06-14.md
+++ b/source/posts/2012-06-14.md
@@ -14,6 +14,8 @@
 
 В общем, идея отличная, и многим пользователям наверняка даже понравится. А я пока судорожно ищу, на что можно поменять Skype для ежедневного использования. У меня-то тем полно, успеваю не только по скайпу рассказать, но и с вами поделиться.
 
+Дополнение от @gray_ru: Стоит учесть, что рекламу обещают показывать только в клиенте для Windows и только для тех, у кого на счете нет совсем никакого Skype Credit и не оформлена никакая подписка. Так что это способ хоть какой-то клок шерсти поиметь с тех, кто все эти годы пользовался совершенной халявой в виде PC-PC звонков. Кстати, интересно, а сколько таких? 
+
 -----
 
 ## Для всех
