--- a/source/posts/2012-06-13.md
+++ b/source/posts/2012-06-13.md
@@ -13,10 +13,11 @@
 3. Пожалуйста, не надо изменять смысл того, что я написал. Мы можем отлично обсудить смысл в комментариях.
 4. Не стоит также присылать реквесты на статьи старше недели. В этом нет смысла, никто не читает эти статьи.
 5. Не надо исправлять названия компаний, о которых я пишу. Дело в том, что это не случайность и не ошибка. В одном и том же тексте может быть и Google, и гугль, и Гугл. Так надо, пожалуйста, не исправляйте этого.
-6. Старайтесь присылать "минимальные пуллреквесты". Т.е., если вы нашли ошибку в разметке страницы и пунктуации - сделайте два реквеста, пожалуйста.
-7. Обратите внимание, весь сайт сейчас живет "в статике" и размещается на S3. Поэтому "ну ведь просто же, сделай вот такую фишку" роутится в локалхост. Сорцы доступны в том же репозитории, правьте, не стесняйтесь.
-8. Лучшая помощь - присылать интересные ссылки. Для этого в репозитории есть каталог [source/drafts](https://github.com/bobuk/addmeto.cc/tree/master/source/drafts). Создавайте там файлик с названием `вашеимя-дата.md`, присылайте пуллреквест, я с удовольствием перемещу вашу ссылку на место в следующем выпуске.
-9. Ну и если ничего другого вы себе позволить не можете - гладьте кота, пишите комментарии, присылайте друзьям ссылки на этот сайт, в общем - делайте всё, чтобы информация расходилась по миру.
+6. Внимание на пробелы. Не присылай реквесты, где обрываются пробелы в конце строки. Они там со смыслом. Некоторые текстовые редакторы могут делать это автоматически, по этому роверяйте свои diff-ы.
+7. Старайтесь присылать "минимальные пуллреквесты". Т.е., если вы нашли ошибку в разметке страницы и пунктуации - сделайте два реквеста, пожалуйста.
+8. Обратите внимание, весь сайт сейчас живет "в статике" и размещается на S3. Поэтому "ну ведь просто же, сделай вот такую фишку" роутится в локалхост. Сорцы доступны в том же репозитории, правьте, не стесняйтесь.
+9. Лучшая помощь - присылать интересные ссылки. Для этого в репозитории есть каталог [source/drafts](https://github.com/bobuk/addmeto.cc/tree/master/source/drafts). Создавайте там файлик с названием `вашеимя-дата.md`, присылайте пуллреквест, я с удовольствием перемещу вашу ссылку на место в следующем выпуске.
+10. Ну и если ничего другого вы себе позволить не можете - гладьте кота, пишите комментарии, присылайте друзьям ссылки на этот сайт, в общем - делайте всё, чтобы информация расходилась по миру.
 
 После сессии редактуры этот текст найдёт специальное, постоянное место на сайте. Будем считать это ToS для тех, кто может не только читать.
 
