--- a/source/posts/2012-06-14.md
+++ b/source/posts/2012-06-14.md
@@ -23,7 +23,7 @@
 * [Ребята в Rockstar Games гении!](http://arstechnica.com/gaming/2012/06/rockstar-condemns-max-payne-3-cheaters-to-play-only-against-each-other/) Тех, кто читит, надо запихнуть в отдельный пулл. Для читтеров. Чтобы читтеры играли **только** с читтерами. {rockstar} {maxpayne3} {games}
 * [Почему приватность важна, даже если тебе нечего скрывать.](http://chronicle.com/article/Why-Privacy-Matters-Even-if/127461/) Большая цитата из книги Daniel J. Solove, профессора права из университета Вашингтона. Никто не хочет перевести? Очень сильная и убедительная статья. {lawyer} {security} {*}
 * [BBC сообщает: создатель Linux все же получил Millennium Technology Prize.](http://www.bbc.com/news/technology-18423502) Правда, ему пришлось разделить приз с чуваком, который изобрел какие-то там жалкие батарейки. Тут надо было добавить "жааалкие людишки!". На самом деле я так пишу потому, что мы Линуса уже поздравляли еще 2 месяца назад. {linux} {money}
-* [Поклонникам идеалогии Zero Inbox,](https://www.beeminder.com/gmailzero) использющим gmail, посвящается. Вы что, правда пользуетесь метафорой пустого инбокса? Это разве не самообман? {gmail} {question}
+* [Поклонникам идеологии Zero Inbox,](https://www.beeminder.com/gmailzero) использющим gmail, посвящается. Вы что, правда пользуетесь метафорой пустого инбокса? Это разве не самообман? {gmail} {question}
 * [Смешной сервис FriendsDomains.](http://friendsdomains.com/) Позволяет поделиться с друзьями списком своих доменов, а потом смотреть, у кого какие есть. Завтра обязатель залью туда список своих доменов. {domain} {web20}
 * [DISQUS официально объявили о переходе на платформу 2012.](http://blog.disqus.com/post/25017922977/the-new-disqus-2012) Переписали, чтобы было так же реалтаймово, как у [livefyre](http://livefyre.com) - боюсь, что и грабли те же. Кстати, ребята из [hypercomments](http://hypercomments.com/) улучшили работу местного движка коментариев на мобильных. Теперь получше? {disqus} {livefyre} {comments} {hypercomments}
 * [Адам Лешинский приводит интересные цитаты из книги Inside Apple.](http://swaaanson.tumblr.com/post/25005539624/kindle-notes-inside-apple-by-adam-lashinsky) В третий раз обещаю себе, что скачаю и прочитаю. Пока не удалось. {apple} {history}
