--- a/source/drafts/amogil-2012-06-15.md
+++ b/source/drafts/amogil-2012-06-15.md
@@ -4,6 +4,13 @@ http://www.zdnet.com/blog/microsoft/three-more-reasons-microsoft-might-buy-yamme
 Австралийский online-ретейлер Kogan.com ввел налог на использование IE7
 http://www.bbc.com/news/technology-18440979
 
+Apple перестала хвалить OS X как самую безопасную ОС
+http://www.smartcompany.com.au/information-technology/050206-apple-pulls-strong-safety-play-safer-than-windows-claims-pulled-from-website.html
+
+20 новых доменов верхнего уровня, которые должны существовать, но никогда не будут
+http://www.wired.com/threatlevel/2012/06/domain-names-that-should-exist/
+
+
 BTW 1, не хочешь использовать какой-нибудь сокращатель урлов с api, чтобы иметь возможность отслеживать переходы и понимать какие темы интересны, а какие нет?
 BTW 2, может стоит попробовать размещать ссылки не только на текст, но и на видео? На TED'e например бывают шикарные доклады.
 BTW 3, Хром показывает две ошибки: 
