update from hackpad

--- a/source/posts/2012-06-15.md
+++ b/source/posts/2012-06-15.md
@@ -25,39 +25,40 @@
 
 Редактирование открыто для всех, нужна только авторизация гугла или фейсбука. Это мой любимый сервис для совместного редактирования HackPad. Редактируйте совместно, а я иногда буду перекладывать тот результат сюда, чтобы и ленивые могли почитать всё как захотят. Надеюсь, что всё будет хорошо и такие эксперименты будут редкостью.
 
+
+
+
 ## Для всех
-* [Yammer Agrees to Sell Itself to Microsoft - WSJ.com](http://online.wsj.com/article/SB10001424052702303822204577467312505454118.html?mod=googlenews_wsj) 
-* [Microsoft Is Buying Yammer, According To People At Yammer - Business Insider](http://www.businessinsider.com/microsoft-yammer-rumor-2012-6) 
-* [Q: Why Does Microsoft Need Yammer? A: To Save SharePoint](http://www.readwriteweb.com/enterprise/2012/06/q-why-does-microsoft-need-yammer-a-to-save-sharepoint.php) 
-* [Facebook Integration for WordPress - Facebook Developers](https://developers.facebook.com/blog/post/2012/06/12/facebook-integration-for-wordpress/) 
-* [Apple, Oracle Ship Java Security Updates — Krebs on Security](http://krebsonsecurity.com/2012/06/apple-oracle-ship-java-security-updates/) 
-* [How iOS 6 and Mountain Lion are distancing Apple from Google | Digital Trends](http://www.digitaltrends.com/mobile/ios6-mountain-lion-force-apple-away-from-google/) 
-* [Apple now requires user permission in iOS 6 before apps can access private data | 9to5Mac | Apple Intelligence](http://9to5mac.com/2012/06/14/apple-now-requires-user-permission-in-ios-6-before-apps-can-access-private-data/) 
-* [Elop: Windows Phones just aren’t selling well | Windows Phone Sauce](http://www.wpsauce.com/2012/06/elop-windows-phones-selling.html?utm_source=twitterfeed&utm_medium=twitter&utm_campaign=Feed%3A+WindowsPhoneSauce+%28Windows+Phone+Sauce%29) 
-* [OpenCount: a Community-Powered App with Codiqa and Firebase | Codiqa](http://blog.codiqa.com/2012/06/opencount-civic-app-with-codiqa-and-firebase/?1) 
-* [Share Your Wi-Fi, Get Rewarded](http://mashable.com/2012/06/14/karma-wifi/) 
-* [Hey Web Designers and Web Developers, Are You Blogging Yet?](http://www.1stwebdesigner.com/design/web-designers-developers-blogging/) 
+* [Майкрософт покупает сервис корпоративных микроблогов Yammer](http://online.wsj.com/article/SB10001424052702303822204577467312505454118.html?mod=googlenews_wsj), причем на этот раз, похоже, [не только для найма.](http://www.readwriteweb.com/enterprise/2012/06/q-why-does-microsoft-need-yammer-a-to-save-sharepoint.php) Корпорация зла укрепляет свои позиции и кроме общения и совместной работы добавляет социальность. Yammer была запущена в 2008 г. и сейчас используется более чем в 200 тыс. компаний. На самом деле, конечно это всего лишь попытка сделать что-то с непопулярным и умирающим SharePoint. [Еще об этом же на businessinsider](http://www.businessinsider.com/microsoft-yammer-rumor-2012-6)
+* [Facebook Integration for WordPress - Facebook Developers](https://developers.facebook.com/blog/post/2012/06/12/facebook-integration-for-wordpress/) 
+* [Apple, Oracle Ship Java Security Updates — Krebs on Security](http://krebsonsecurity.com/2012/06/apple-oracle-ship-java-security-updates/) В лесу наверное что-то умерло - Apple и Oracle выпускают обновление Java в один и тот же день. Неужели Apple вынесла какой то урок из истории с Flashback?.
+* [How iOS 6 and Mountain Lion are distancing Apple from Google | Digital Trends](http://www.digitaltrends.com/mobile/ios6-mountain-lion-force-apple-away-from-google/) 
+* [Apple now requires user permission in iOS 6 before apps can access private data | 9to5Mac | Apple Intelligence](http://9to5mac.com/2012/06/14/apple-now-requires-user-permission-in-ios-6-before-apps-can-access-private-data/) 
+* [Elop: Windows Phones just aren’t selling well | Windows Phone Sauce](http://www.wpsauce.com/2012/06/elop-windows-phones-selling.html?utm_source=twitterfeed&utm_medium=twitter&utm_campaign=Feed%3A+WindowsPhoneSauce+%28Windows+Phone+Sauce%29) 
+* [OpenCount: a Community-Powered App with Codiqa and Firebase | Codiqa](http://blog.codiqa.com/2012/06/opencount-civic-app-with-codiqa-and-firebase/?1) 
+* [Расшарь Wi-Fi не за просто так](http://mashable.com/2012/06/14/karma-wifi/) Karma вознаграждает пользователей своих хотспотов за каждый гигабайт расшареного трафика.
+* [Ау, веб-дизайнеры и веб-девелоперы! У вас еще нет блога?](http://www.1stwebdesigner.com/design/web-designers-developers-blogging/) А ведь это лучшая возможность заявить о себе и расширить собственные горизонты восприятия.
 * [What the hell does ≡ do, anyway?](http://ada.mbecker.cc/post/25113870928/goddamn-three-bars-icon)
-* [Infincia - Is the new Airport Express an iOS device?](http://infincia.com/blog/airport-express-ios-device) 
-* [101 Awesome new WordPress themes | Webdesigner Depot](http://www.webdesignerdepot.com/2012/06/101-awesome-new-wordpress-themes/) 
+* [Infincia - Is the new Airport Express an iOS device?](http://infincia.com/blog/airport-express-ios-device) 
+* [101 крутая тема для WordPress](http://www.webdesignerdepot.com/2012/06/101-awesome-new-wordpress-themes/) Не совсем понятно что такая ссылка делает в бложике самого Бобука. Хотя нет, понятно, недавно кто-то в твиттерах жаловался что все хорошие темы - платные. Вот вам - много хороших и бесплатных!
 
 ## На грани
-* [Sick of Video Buffering Over Wi-Fi? This Router Can Do Something About It](http://mashable.com/2012/06/14/wd-mynet-router/) 
-* [How to View Website Source Codes on iPad / iPhone [Quicktip]](http://www.hongkiat.com/blog/view-source-codes-in-ipad-iphone/) 
-* [ColorZilla for Firefox - Eyedropper, Color Picker and much more](http://www.colorzilla.com/firefox/) 
-* [Git Best Practices: Workflow Guidelines | Lullabot](http://www.lullabot.com/articles/git-best-practices-workflow-guidelines) 
-* [Life Beyond 960px: Designing for Large Screens | Webdesigntuts+](http://webdesign.tutsplus.com/articles/general/life-beyond-960px-designing-for-large-screens/) 
-* [Responsive images: what's the problem, and how do we fix it? - Dev.Opera](http://dev.opera.com/articles/view/responsive-images-problem/) 
+* [Роутеры от Western Digital, которые анализируют трафик на лету и отдают приоритет видео-стимингу](http://mashable.com/2012/06/14/wd-mynet-router/), скайпу и играм, в общем тем штукам, лаги в которых вас раздражают.
+* [How to View Website Source Codes on iPad / iPhone [Quicktip]](http://www.hongkiat.com/blog/view-source-codes-in-ipad-iphone/) 
+* [ColorZilla for Firefox - Eyedropper, Color Picker and much more](http://www.colorzilla.com/firefox/) 
+* [Git Best Practices: Workflow Guidelines | Lullabot](http://www.lullabot.com/articles/git-best-practices-workflow-guidelines) 
+* [Life Beyond 960px: Designing for Large Screens | Webdesigntuts+](http://webdesign.tutsplus.com/articles/general/life-beyond-960px-designing-for-large-screens/) 
+* [Responsive images: what's the problem, and how do we fix it? - Dev.Opera](http://dev.opera.com/articles/view/responsive-images-problem/) 
 
 ## Для гиков
-* [Titan is a distributed graph database optimized for storing and processing large-scale graphs within a multi-machine cluster](http://thinkaurelius.github.com/titan/)
-* [Better Web Templating with AngularJS 1.0 - Google Developers Blog](http://googledevelopers.blogspot.com/2012/06/better-web-templating-with-angularjs-10.html) 
-* [How to Create a Resumable Video Uploader in Node.js | Nettuts+](http://net.tutsplus.com/tutorials/javascript-ajax/how-to-create-a-resumable-video-uploade-in-node-js/) 
-* [Exploring Expressions of Emotions in GitHub Commit Messages | Geeksta](http://geeksta.net/geeklog/exploring-expressions-emotions-github-commit-messages/) 
-* [Just a little Python: Schema Maintenance with Ming and MongoDB](http://blog.pythonisito.com/2012/06/schema-maintenance-with-ming-and.html) 
-* [DailyJS: Node Overflow: Countly, Prelude, fibonacci-async](http://dailyjs.com/2012/06/14/node-overflow/) 
-* [Backbone.js Views Done the Right Way](http://blog.gaslightsoftware.com/post/24538291598/backbone-js-views-done-the-right-way?utm_medium=hackernews) 
+* [Titan](http://thinkaurelius.github.com/titan/) — это распределенная БД, оптимизированная для сохранения и обработки больших графов на многомашинном кластере.
+* [Better Web Templating with AngularJS 1.0 - Google Developers Blog](http://googledevelopers.blogspot.com/2012/06/better-web-templating-with-angularjs-10.html) 
+* [Видое-аплоадер с догрузкой для Node.js | Nettuts+](http://net.tutsplus.com/tutorials/javascript-ajax/how-to-create-a-resumable-video-uploade-in-node-js/). Неплохой туториал начального уровня. Вообще удивительно много туториалов по node.js последнее время. Что, node - новая рельса?
+* [Exploring Expressions of Emotions in GitHub Commit Messages | Geeksta](http://geeksta.net/geeklog/exploring-expressions-emotions-github-commit-messages/) - исследование 
+* [Just a little Python: Schema Maintenance with Ming and MongoDB](http://blog.pythonisito.com/2012/06/schema-maintenance-with-ming-and.html) 
+* [DailyJS: Node Overflow: Countly, Prelude, fibonacci-async](http://dailyjs.com/2012/06/14/node-overflow/) 
+* [Backbone.js Views Done the Right Way](http://blog.gaslightsoftware.com/post/24538291598/backbone-js-views-done-the-right-way?utm_medium=hackernews) 
 
 ## Разное
 
-* [15 Worst Excuses Not to Be an Entrepreneur | Inc.com](http://www.inc.com/jeff-haden/15-worst-excuses-not-to-be-an-entrepreneur.html) 
+* [15 Worst Excuses Not to Be an Entrepreneur | Inc.com](http://www.inc.com/jeff-haden/15-worst-excuses-not-to-be-an-entrepreneur.html) Хочешь открыть свой бизнес, но не знаешь как? Боишься и не имеешь связей? Статья об основных отговорках и причинах, по которым люди отказываются от открытия бизнеса.
