--- a/source/posts/2012-06-15.md
+++ b/source/posts/2012-06-15.md
@@ -19,7 +19,9 @@
 
 -----
 
-В этот момент у меня **внезапно** кончилось время. Я успел отобрать для вас хорошие и интересные новости, но не успел ничего больше. Поэтому я предлагаю вам эксперимент: [вот вам поле для свободного редактирования этого файла](2012 06 15.md)
+В этот момент у меня **внезапно** кончилось время. Я успел отобрать для вас хорошие и интересные новости, но не успел ничего больше. Поэтому я предлагаю вам эксперимент: 
+
+## [вот вам поле для свободного редактирования этого файла](https://hackpad.com/2ggLLD8yFVv#2012-06-15.md)
 
 
 
