приемлимый -> приемлемый пруф https://ru.wiktionary.org/wiki/%D0%BF%D1%80%D0%B8%D0%B5%D0%BC%D0%BB%D0%B5%D0%BC%D1%8B%D0%B9

--- a/source/posts/2012-06-14.md
+++ b/source/posts/2012-06-14.md
@@ -55,7 +55,7 @@
 * [Альтернативный подход к Git.](http://www.randyfay.com/node/91) Чуваку не нравится мержиться через pull/push, потому что мало контроля за происходящим. И он всем предлагает работать через бранч-ребейс-пуш. Ужас, в общем, и чудеса мазохизма. {git} {bdsm}
 * [Давний программист на PHP рассуждает на тему, почему PHP не моден,](http://blog.appfog.com/php-the-quiet-powerhouse/) а так же оптимистично считает что PHP всё еще на коне и лучше всех. Даже не знаю, что ещё написать. {php} {php} {php} {bullshit} {php}
 * [У них флешмоб! Вот ](http://vascop.github.com/blog/2012/06/13/why-I-use-python-and-enjoy-it-thoroughly.html) еще один чувак, который рассказывает про свой любимый язык. На этот раз про python, и так же предвзято, как про php. {python} {python} {pip} {python}
-* [Alloy - фреймворк для написания приложений в среде Титаниум.](https://github.com/appcelerator/alloy) Я вам про среду эту много раз рассказывал, писать на ней всегда было не то чтобы очень удобно. А Alloy дает вполне приемлимый MVC и кучу шорткатов к разным операциям титаниума. {javascript} {html} {titanium} {moble}
+* [Alloy - фреймворк для написания приложений в среде Титаниум.](https://github.com/appcelerator/alloy) Я вам про среду эту много раз рассказывал, писать на ней всегда было не то чтобы очень удобно. А Alloy дает вполне приемлемый MVC и кучу шорткатов к разным операциям титаниума. {javascript} {html} {titanium} {moble}
 * [Construct.js - минималистичная обертка для облегчения обьектного программирования в JS.](https://github.com/jlongster/construct.js) Для тех, кто не осилил понять, что такое прототип. {javascript} {html}
 * [MongoLab рассказывает, как правильно делать комбинированные индексы,](http://blog.mongolab.com/2012/06/cardinal-ins/) а так же почему правильнее работать с сортированными данными. Вроде бы всё очевидно, но советы дельные. {mongo}
 
