--- a/source/posts/2012-06-15.md
+++ b/source/posts/2012-06-15.md
@@ -44,7 +44,7 @@
 ## На грани
 * [Роутеры от Western Digital, которые анализируют трафик на лету и отдают приоритет видео-стримингу](http://mashable.com/2012/06/14/wd-mynet-router/), скайпу и играм, в общем тем штукам, лаги в которых вас раздражают.
 * [Инструкция для тех, кто хочет настроить просмотр исходного кода страницы на iPad / iPhone](http://www.hongkiat.com/blog/view-source-codes-in-ipad-iphone/). Проверено - работает, мин нет!
-* [ColorZilla для Firefox и Chrome](http://www.colorzilla.com/firefox/) — плагин для браузера, доющий возможность узнать цвет любого пиксела на экране (и скопировать его код в буфер обмена), похожий на фотошоповский диалог выбора цвета, анализатор цветов на странице и "непревзойдённый" генератор css-градиентов. Прекрасно работает в [Firefox Nightly](http://nightly.mozilla.org/), кстати.
+* [ColorZilla для Firefox и Chrome](http://www.colorzilla.com/firefox/) — плагин для браузера, дающий возможность узнать цвет любого пиксела на экране (и скопировать его код в буфер обмена), похожий на фотошоповский диалог выбора цвета, анализатор цветов на странице и "непревзойдённый" генератор css-градиентов. Прекрасно работает в [Firefox Nightly](http://nightly.mozilla.org/), кстати.
 * [Лучшие практики Git: руководство по процессу](http://www.lullabot.com/articles/git-best-practices-workflow-guidelines) — советы о ежедневной работе с Git-ом. Довольно Капитанские, но от этого не становящиеся плохими. Особенно будет полезно новичкам и всем, кто боится мерджинга.
 * [Life Beyond 960px: Designing for Large Screens | Webdesigntuts+](http://webdesign.tutsplus.com/articles/general/life-beyond-960px-designing-for-large-screens/) 
 * [Responsive images: what's the problem, and how do we fix it? - Dev.Opera](http://dev.opera.com/articles/view/responsive-images-problem/) 
